--- a/index.html
+++ b/index.html
@@ -7,20 +7,10 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
-    <div id="app">{{ message }}</div>
+    <div id="app">
+        <h1>{{ message }}</h1>
+    </div>
 
-<script>
-    const { createApp, ref } = Vue
-
-    createApp({
-    setup() {
-        const message = ref('Hello vue!')
-        return {
-        message
-        }
-    }
-    }).mount('#app')
-</script>
 <script src="./js/app.js"></script>
 </body>
 </html>
