--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="app">
         <h1>{{ message }}</h1>
+        <img :src="img" alt="">
     </div>
 
 <script src="./js/app.js"></script>
