--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
-    <div id="app">
+    <div id="app" style="text-align: center;">
         <h1>{{ message }}</h1>
         <img :src="img" alt="">
     </div>
