ADD: flie readme and few question

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="app" style="text-align: center;">
         <h1>{{ message }}</h1>
-        <img :src="img" alt="">
+        <img v-bind:src="img" alt="">
     </div>
 
 <script src="./js/app.js"></script>
